--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
      </section>
      <section id="contact">
         <h2>CONTACT</h2>
-        <span>
+        <span class="span1">
             <a href="https://github.com/AndresHernandez1996">GitHub</a>
         </span>
-        <span>
+        <span class="span2">
             <a href="https://www.facebook.com/andrewapples169">Facebook</a>
         </span>
-        <span>
+        <span class="span3">
             <a href="https://www.instagram.com/yayo._/">Instagram</a>
         </span>
      </section>
